[metadata]
name = relic-tool-sga-v2
version = attr: relic.sga.v2.__version__

author = Marcus Kertesz
; author_email = author@example.com
description = A library for reading & writing Relic's SGA (V2.0) archive files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ModernMAK/Relic-Tool-SGA-V2
project_urls =
    Bug Tracker = https://github.com/ModernMAK/Relic-Tool-SGA-V2/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9


install_requires =
    mak-serialization-tools
    relic-tool-sga-core ~= 1.0.0

[options.packages.find]
where = src