[metadata]
name = relic-tool-sga-v2
version = attr: relic.sga.v2.__version__
author = Marcus Kertesz
description = A plugin to read/write Relic SGA (V2) archive files.

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/MAK-Relic-Tool/Relic-Tool-SGA-V2

project_urls =
    Bug Tracker = https://github.com/MAK-Relic-Tool/Issues-Tracker/issues

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.9
include_package_data = True
packages = find_namespace:
package_dir =
    = src

install_requires =
    relic-tool-sga-core ~= 2.0.0

[options.entry_points]
fs.opener =
    sga-v2 = relic.sga.v2.opener:EssenceFSV2Opener
    sga-dow = relic.sga.v2.opener:EssenceFSV2Opener
    sga-ic = relic.sga.v2.opener:EssenceFSV2Opener

relic.sga.opener =
	v2.0 = relic.sga.v2.opener:EssenceFSV2Opener

relic.cli.sga.pack =
    v2 = relic.sga.v2.cli:RelicSgaPackV2Cli

relic.cli.sga.repack =
    v2 = relic.sga.v2.cli:RelicSgaRepackV2Cli

[options.packages.find]
where = src